frontend/src/containers/home/Home.css
.home {
    width: 100vw;
    max-width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.home__content {
    width: 70vw;
    max-width: 70vw;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    gap: 50px;
}


.home__main {
    width: 100%;
    background: linear-gradient(359.68deg, #000000 0.26%, #1B2025 99.71%);
    border-radius: 30px;
    box-shadow: 0px 4px 61px -23px #FFFFFF;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    padding: 50px;
    gap: 50px;
}


.home__first {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.home__profile {
    max-width: 50%;
    display: flex;
    flex-direction: column;
    gap: 10px;
}
.home__username {
    font-size: 32px;
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
.home__steamid {
    font-size: 20px;
    color: var(--xylium-color-darkpink);
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
.home__type-writer {
    padding-top: 20px;
    box-sizing: border-box;
    max-width: 80%;
    text-align: center;
    min-height: 300px;
    font-weight: 500;
    font-size: 26px;
    line-height: 36px;
    text-align: start;
    letter-spacing: 0.165em;   
}
.home__type-writed-text {
    font-weight: 500;
    font-size: 26px;
    line-height: 36px;
    text-align: start;
    letter-spacing: 0.165em;   
    color: #E90064;
}
.home__type-bg {
    background: linear-gradient(180deg, #CC208E 0%, #6713D2 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    text-fill-color: transparent;
}
.home__mobile-nav {
    display: none;
}


.home__friends {
    width: 50%;
    min-height: 500px;
    font-size: 24px;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.home__friends-list {
    background: linear-gradient(359.68deg, #000000 0.26%, #1B2025 99.71%);
    box-shadow: 0px 0px 34px -6px black;
    border-radius: 22px;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    padding: 30px;
    display: flex;
    flex-direction: column;
    gap: 50px;
    transition: all 0.5s ease-in-out;
}
.home__friends-list:hover{
    box-shadow: 0px 0px 70px 8px #76003E;
}

.home__category {
    display: flex;
    width: 100%;
    justify-content: space-between;
}
.home__category-svg {
    width: 30px;
    height: 30px;
}


.home__recent {
    width: 100%;
    font-size: 24px;
    display: flex;
    flex-direction: column;
    gap: 30px;
}
.home__recent-list {
    width: 100%;
    background: linear-gradient(359.68deg, #000000 0.26%, #1B2025 99.71%);
    box-shadow: 0px 0px 15px -1px black;
    border-radius: 15px;
    min-height: 250px;
    display: flex;
    flex-wrap: wrap;
    gap: 50px;
    align-items: center;
    padding: 30px;
    box-sizing: border-box;
    transition: all 0.5s ease-in-out;
}
.home__recent-list:hover{
    box-shadow: 0px 0px 70px 8px #76003E;
}
.home__recent-game {
    overflow: hidden;
    border-radius: 20px;
    position: relative;
    max-width: 278px;
    height: 130px;   
}
.home__recent-gamebg {
    background-image: var(--xylium-button);
    background-blend-mode: darken;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2;
    opacity: 0.9;
    width: 100%;
    max-width: 278px;
    font-weight: 600;
    height: 100%;
    top: 0;
    right: 0;
    transition: all 0.3s ease-in-out;
    padding: 20px;
    box-sizing: border-box;
    text-align: center;
}
.home__recent-gamename {
    text-align: center;
    max-width: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.home__recent-gamebg:hover {
    opacity: 0;
}
.home__recent-game img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}



@media only screen and (max-width: 1500px) {
    .home__content {
        width: 80vw;
        max-width: 80vw;
    }
}
@media only screen and (max-width: 1300px) {
    .home__content {
        width: 90vw;
        max-width: 90vw;
    }
    .home__main {
        padding: 30px;
    }
    .home__first {
        flex-direction: column;
    }
    .home__profile {
        max-width: 100%;
    }
    .home__type-writer {
        max-width: 100%;
        min-height: 200px;
    }
    .home__friends {
        width: 100%;
        min-height: 200px;
    }

}

